# Anime-World

./: .dockerignore  .env.example  Dockerfile  design_guidelines.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  start.sh
.emergent/: emergent.yml
.github/workflows/: ci.yml
backend/: __init__.py  auth.py  comments.py  config.py  constants.py  database.py  episodes.py  exceptions.py  logger.py  middleware.py  models.py  notifications.py  payments.py  profiles.py  requirements.txt  schemas.py  series.py  server.py  utils.py  watchlist.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health_and_anime.py  test_profiles_and_history.py  test_watchlist.py
frontend/: .env  package.json
frontend/app/: _layout.tsx  add-episode.tsx  auth.tsx  content-restrictions.tsx  create-series.tsx  creator-dashboard.tsx  edit-profile.tsx  fan-dashboard.tsx  history.tsx  notifications.tsx  settings.tsx  switch-profile.tsx  watch.tsx
frontend/app/(tabs)/: _layout.tsx  browse.tsx  index.tsx  profile.tsx  studio.tsx  watchlist.tsx
frontend/app/anime/: [id].tsx
frontend/app/creator/: [id].tsx
frontend/app/episode/: [id].tsx
frontend/app/policies/: about.tsx  contact.tsx  cookies.tsx  disclaimer.tsx  dmca.tsx  privacy.tsx  (+1 more)
frontend/src/: AuthContext.tsx  CommentsSection.tsx  ReportModal.tsx  api.ts  theme.ts  types.ts
memory/: PRD.md
test_reports/: iteration_1.json  iteration_2.json
test_reports/pytest/: pytest_profiles_history.xml  pytest_results.xml
tests/: __init__.py  conftest.py  test_auth.py  test_episodes.py  test_series.py
(+1 files in other folders)
