[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "anime-world-api"
version = "1.0.0"
description = "Anime streaming platform API built with FastAPI and MongoDB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | frontend
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend"]
skip_glob = ["frontend/*", ".venv/*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = false
warn_unused_ignores = true
exclude = ["frontend/", "tests/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --no-header"

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
]
show_missing = true
fail_under = 60

[tool.bandit]
exclude_dirs = ["tests", "frontend", ".venv"]
skips = ["B101"]  # Allow assert statements in tests
